@@ -1,5 +1,5 @@
 fileFormatVersion: 2
-guid: ba766a535eb2b40c19bf43913b846dd4
+guid: 98eb1b78672bd49daa6976b323caee12
 TextureImporter:
   fileIDToRecycleName: {}
   externalObjects: {}
