@@ -1,5 +1,5 @@
 fileFormatVersion: 2
-guid: b7786ba78860544cdbdc398de2c7f907
+guid: 70f4280bea2f142cab65a622f9b6979a
 TextureImporter:
   fileIDToRecycleName: {}
   externalObjects: {}
