@@ -1,5 +1,5 @@
 fileFormatVersion: 2
-guid: 501515c8fadcc45558757e1da7df9f93
+guid: fbe6cd4d7ed6a47abb3d26829038cd50
 TextureImporter:
   fileIDToRecycleName: {}
   externalObjects: {}
