@@ -1,5 +1,5 @@
 fileFormatVersion: 2
-guid: 26cf2cc15924144aa8d43b9a88dfcf26
+guid: 40969e5ac1b9f41c4926687611cc8563
 TextureImporter:
   fileIDToRecycleName: {}
   externalObjects: {}
