@@ -1,5 +1,5 @@
 fileFormatVersion: 2
-guid: ca9f80ce26c744c539a8e847cd9e545d
+guid: 180a3aadcabe94b7f896cc13807125ff
 TextureImporter:
   fileIDToRecycleName: {}
   externalObjects: {}
