@@ -667,8 +667,8 @@
 		{ "key": "LesserWraith_monster_description", "value": "Malevolent souls of those who died under false promises." },
 		{ "key": "Wraith_monster", "value": "Wraith" },
 		{ "key": "Wraith_monster_description", "value": "Regretful spirit that failed to let go of the past." },
-		{ "key": "FloatingHand_monster", "value": "Floating Hand" },
-		{ "key": "FloatingHand_monster_description", "value": "Reanimated hand that became as cursed as the spirit that took control of it." },
+		{ "key": "FloatingArm_monster", "value": "Floating Arm" },
+		{ "key": "FloatingArm_monster_description", "value": "Reanimated arm that became as cursed as the spirit that took control of it." },
 		{ "key": "Ravager_monster", "value": "Ravager" },
 		{ "key": "Ravager_monster_description", "value": "Feral beasts that live for the smell of blood." },
 		{ "key": "VampireBat_monster", "value": "Vampire Bat" },
